--- a/etc/hacking.org
+++ b/etc/hacking.org
@@ -1761,12 +1761,18 @@ pkl_ast_make_array_type (pkl_ast ast, pkl_ast_node etype, pkl_ast_node bound)
    can debug it normally.
 
    Something to keep in mind, however, is that the Boehm GC we use
-   uses SIGPWR for internal purposes, in order to stop all threads
-   before starting collecting memory.  Normally this signal is
-   delivered right after the system is powered on and booted, and it
-   is almost always ignored by processes.  However, when you run poke
-   under GDB, GDB will stop once SIGPWR is signaled to the current
-   thread.  If this happens, just (c)ontinue.
+   uses SIGPWR and SIGXCPU for internal purposes, in order to stop all
+   threads before starting collecting memory.  Proper handlers are
+   installed by the GC for these signals.  However, when you run poke
+   under GDB, GDB will stop once SIGPWR or SIGXCPU are signaled to the
+   current thread.
+
+   You can teach GDB to ignore these signals by issuing this command:
+
+   : handle SIGPWR noprint pass
+   : handle SIGXCPU noprint pass
+
+   Alternatively, you can just (c)ontinue.
 
 ** Using GDB extensions
 
