--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,22 @@
 2023-11-24  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify2_ps_type_array): Sanity check
+	fixed size bounds.
+	* testsuite/poke.map/maps-unions-14.pk: Adapt test.
+	* testsuite/poke.map/maps-unions-15.pk: Likewise.
+	* testsuite/poke.map/maps-unions-16.pk: Likewise.
+	* testsuite/poke.pkl/scons-union-14.pk: Likewise.
+	* testsuite/poke.pkl/scons-union-13.pk: Likewise.
+	* testsuite/poke.pkl/scons-union-12.pk: Likewise.
+	* testsuite/poke.pkl/array-siz-diag-2.pk: New test.
+	* testsuite/poke.pkl/array-siz-diag-3.pk: Likewise.
+	* testsuite/poke.pkl/array-siz-2.pk: Likewise.
+	* testsuite/poke.pkl/array-siz-3.pk: Likewise.
+	* testsuite/poke.pkl/cast-array-siz-diag-1.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2023-11-24  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/orc.pk: New file.
 	* pickles/Makefile.am (dist_pickles_DATA): Add orc.pk.
 
