--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2023-12-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-ast.c (pkl_ast_print): Change `fprintf' with `fputs'.
+
 2023-12-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/libpoke.h (struct pk_iod_if): Fix comments by referring to
