--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-01-07  Mark Wielaard  <mark@klomp.org>
+
+    * etc/pvm-wraps-whitelist: Add __stack_chk_guard.
+
 2023-12-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* libpoke/pkl-ast.c (pkl_ast_handle_bconc_ass_stmt): Add location
