--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-01-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* doc/poke.texi (open): Document that IO space identifiers are
+	allocated sequentially and consistently reused.
+
 2024-01-07  Mark Wielaard  <mark@klomp.org>
 
     * etc/pvm-wraps-whitelist: Add __stack_chk_guard.
