--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-01-20  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* testsuite/Makefile.am (EXTRA_DIST): Add `poke.pvm/pvm.exp'.
+
 2024-01-20  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* doc/poke.texi (open): Document that IO space identifiers are
