--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-01-22  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/Makefile.am (LTV_CURRENT): Bump to 1.
+
 2024-01-20  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* testsuite/Makefile.am (EXTRA_DIST): Add `poke.pvm/pvm.exp'.
