--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-01-22  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/poke.c (pk_print_version): Update --version copyright to
+	2024.
+
+2024-01-22  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* NEWS: Add entries for 3.90.1.
 	* doc/gendocs_template (For version): Update to 3.90.1.
 
