--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-01-22  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* poke/poke.c (pk_print_version): Update --version copyright to
+	2024.
+
+2024-01-22  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/Makefile.am (LTV_CURRENT): Bump to 1.
 
 2024-01-20  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
