--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,13 @@
 	* poke/pk-term.h (pk_compiler): Don't re-typedef `pk_compiler'.
 	Include "libpoke.h".
 
+2024-01-25  Andreas Klinger  <ak@it-klinger.de>
+
+	* poke/pk-cmd.h: New command arg type PK_CMD_ARG_UINT
+	* poke/pk-cmd.c (pk_atou): New function
+	* poke/pk-cmd-ios.c (pk_cmd_mmap, pk_cmd_sub):
+				Change base and size to PK_CMD_ARG_UINT
+
 2024-01-22  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* poke/poke.c (pk_print_version): Update --version copyright to
