--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-02-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* bootstrap.conf (gnulib_modules): Update comment to mention
+	`pokefmt'.
+
+2024-02-10  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* bootstrap.conf (gnulib_modules): Add `strerror'.
 	* poked/usock-buf.c (#include <err.h>): Remove.
 	* poked/usock.h (USOCK_SERVE_OK): New macro.
