--- a/doc/poke.texi
+++ b/doc/poke.texi
@@ -5390,6 +5390,7 @@ type Packet =
 Note how we use a variable @code{MAXSIZE} in order to avoid
 hard-coding 4096 twice in the struct definition.
 
+@cindex SELF
 Occasionally it is useful to access to additional properties of a
 containing struct or union in a method, other than its fields.  For
 this purpose it is possible to refer explicitly to the struct using
@@ -12686,6 +12687,7 @@ the struct value whose method is being used.
 Methods can refer to the fields of the containing struct type that
 have been defined before the method itself, by name.
 
+@cindex SELF
 Additionally, the containing struct can be referred explicitly under
 the name @code{SELF} in the body of the method.  @code{SELF} has type
 @code{any}.
