--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2024-02-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* bootstrap.conf (gnulib_modules): Import regex module from
+	gnulib.
+
+2024-02-12  Jose E. Marchesi  <jemarch@gnu.org>,
+
 	* doc/poke.texi (Struct Methods): Entry for SELF in concept index.
 	(Methods): Likewise.
 
