--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2024-02-17  Hannes Domani  <ssbssa@yahoo.de>
+
+	* poke/pk-term.c (update_screen_dimensions): Define if not availbale.
+
 2024-02-15  Hannes Domani  <ssbssa@yahoo.de>
 
 	* libpoke/ras: Ignore '\r' of windows line endings.
