Add Hannes Domani to AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,3 +16,4 @@ David Faust             <david.faust@oracle.com>
 Indu Bhagat             <indu.bhagat@oracle.com>
 Matt Ihlenfield         <mtihlenfield@protonmail.com>
 Arsen Arsenović		<arsen@aarsen.me>
+Hannes Domani           <ssbssa@yahoo.de>
