--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2024-02-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* run.in (PATH): Add pokefmt/ and poked/ to PATH env var.
+
+2024-02-24  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* poked/usock.c (usock_handler_srv): Do F_GETFL before F_SETFL
 	on client sockets.
 
